[gd_scene load_steps=4 format=3 uid="uid://c02s2e23lhgw6"]

[ext_resource type="Script" uid="uid://c4a8cxmg3n013" path="res://Scripts/General Scripts/Start_menu.gd" id="1_18i8s"]
[ext_resource type="PackedScene" uid="uid://dogqm3tc43mna" path="res://Scenes/Game/game.tscn" id="2_2klqx"]
[ext_resource type="Texture2D" uid="uid://bn16yljriwfh0" path="res://Used Assets/Stage 1.jpeg" id="4_3ir0d"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_18i8s")
game_scene = ExtResource("2_2klqx")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="PlayerName" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="GameName" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "ASTEROID DEFENCE"

[node name="PlayButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="OptionsButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="LogOut Button" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Log Out"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("4_3ir0d")

[connection signal="pressed" from="CenterContainer/VBoxContainer/LogOut Button" to="." method="_on_log_out_button_pressed"]
